* doc/extend.texi (Deprecated Features): Deprecate implicit 	typename. Document that named return and initializer lists are now 	removed. cp: 	* decl.c (grokdeclarator): Deprecated implicit typename use. testsuite: 	* g++.old-deja/g++.brendan/crash56.C: Adjust implicit typename. 	* g++.old-deja/g++.jason/2371.C: Likewise. 	* g++.old-deja/g++.jason/template33.C: Likewise. 	* g++.old-deja/g++.jason/template34.C: Likewise. 	* g++.old-deja/g++.jason/template36.C: Likewise. 	* g++.old-deja/g++.oliva/typename1.C: Likewise. 	* g++.old-deja/g++.oliva/typename2.C: Likewise. 	* g++.old-deja/g++.other/typename1.C: Likewise. 	* g++.old-deja/g++.pt/inherit2.C: Likewise. 	* g++.old-deja/g++.pt/nontype5.C: Likewise. 	* g++.old-deja/g++.pt/typename11.C: Likewise. 	* g++.old-deja/g++.pt/typename14.C: Likewise. 	* g++.old-deja/g++.pt/typename16.C: Likewise. 	* g++.old-deja/g++.pt/typename3.C: Likewise. 	* g++.old-deja/g++.pt/typename4.C: Likewise. 	* g++.old-deja/g++.pt/typename5.C: Likewise. 	* g++.old-deja/g++.pt/typename7.C: Likewise. 	* g++.old-deja/g++.robertl/eb9.C: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47927 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-12  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* doc/extend.texi (Deprecated Features): Deprecate implicit
+	typename. Document that named return and initializer lists are now
+	removed.
+
 2001-12-11  Roger Sayle <roger@eyesopen.com>
 
 	* except.c (reachable_next_level): Handle ERT_UNKNOWN to avoid
