--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-12  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* decl.c (grokdeclarator): Deprecated implicit typename use.
+
 2001-12-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR g++/51
