* stmt.c (expand_end_case): Do subtraction of lower bound as trees 	to avoid overflow.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47932 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 12 07:37:52 2001  Olivier Hainque <hainque@act-europe.fr>
+
+	* stmt.c (expand_end_case): Do subtraction of lower bound as trees
+	to avoid overflow.
+
 Wed Dec 12 07:35:24 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* cppfiles.c (read_include_file): Set buffer size properly when
