--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2001-12-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* cp-tree.h (DESTRUCTOR_DECL_PREFIX, DESTRUCTOR_NAME_P,
+	ANON_PARMNAME_FORMAT, ANON_PARMNAME_P, DESTRUCTOR_NAME_FORMAT,
+	THIS_NAME_P): Delete.
+	* spew.c (read_process_identifier): Remove DESTRUCTOR_NAME_P,
+	THIS_NAME_P and ANON_PARMNAME_P tests from warning about clash
+	with internal naming scheme.
+	* error.c (dump_decl): Remove DESTRUCTOR_NAME_P use.
+
 2001-12-12  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* decl.c (grokdeclarator): Deprecated implicit typename use.
