--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-typeck.c (digest_init): Allow initializing
+	static storage duration objects with compound literals.
+	* doc/extend.texi (Compound literals): Document the extension.
+
 2001-12-12  Richard Henderson  <rth@redhat.com>
 
 	* emit-rtl.c (adjust_address_1): Always copy address to avoid
