* jni.cc (call): Synchronize if required.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47949 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-12  Tom Tromey  <tromey@redhat.com>
 
+	* jni.cc (call): Synchronize if required.
+
 	* gij.cc (main): Clarify --help output.
 
 	* gnu/gcj/runtime/StringBuffer.java
