* freeze.ads: Update copyright date.
	* g-comlin.ads: Minor reformatting.

	* gnat-style.texi: Fix typo.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47956 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,13 @@
 2001-12-12  Geert Bosch <bosch@gnat.com>
 
+	* freeze.ads: Update copyright date.
+
+	* g-comlin.ads: Minor reformatting.
+
+	* gnat-style.texi: Fix typo.
+
+2001-12-12  Geert Bosch <bosch@gnat.com>
+
 	*  einfo.h: Regenerate.
 
 2001-12-12  Ed Schonberg <schonber@gnat.com>
