--- a/gcc/ada/gnat-style.texi
+++ b/gcc/ada/gnat-style.texi
@@ -6,7 +6,7 @@
 @c                                                                            o
 @c                      G N A T   C O D I N G   S T Y L E                     o
 @c                                                                            o
-@c                               $Revision: 1.1 $
+@c                               $Revision$
 @c                                                                            o
 @c          Copyright (C) 1992-2001 Ada Core Technologies, Inc.               o
 @c                                                                            o
@@ -36,9 +36,9 @@
 
 @titlepage
 @sp 10
-@title GNAT Coding Stye
+@title GNAT Coding Style
 @subtitle A guide for GNAT developers
-@subtitle Document revision level $Revision: 1.1 $
+@subtitle Document revision level $Revision$
 @subtitle Date: @today{}
 @author Ada Core Technologies, Inc.
 @end titlepage
