--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-12  Tom Tromey  <tromey@redhat.com>
 
+	* prims.cc (_Jv_RunMain): Use `using' to simplify code.  Set
+	_Jv_Jar_Class_Path early.
+
 	* jni.cc (call): Synchronize if required.
 
 	* gij.cc (main): Clarify --help output.
