* config/alpha/vms-cc.c (preprocess_args): Fix forward 	declaration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47970 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 13 06:48:38 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* config/alpha/vms-cc.c (preprocess_args): Fix forward
+	declaration.
+
 Thu Dec 13 12:31:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (estimate_probability): Reorganize opcode heuristics.
