--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,24 @@
 2001-12-13  Richard Earnshaw  <rearnsha@arm.com>
 
+	* collect2.c (COLLECT_SHARED_INIT_FUNC)
+	(COLLECT_SHARD_FINI_FUNC): Define default values.
+	(write_c_file_stat): Use them to call construtor and destructor 
+	functions in shared libraries.
+	* doc/tm.texi (COLLECT_SHARED_INIT_FUNC)
+	(COLLECT_SHARD_FINI_FUNC): Document them.
+	* config/netbsd.h (COLLECT_SHARED_INIT_FUNC)
+	(COLLECT_SHARD_FINI_FUNC): Define.
+
+	* config/netbsd.h (LINK_SPEC): Don't pull in estart if creating a
+	shared library.  Pass -shared through to the linker.
+	* config/arm/netbsd.h (LINK_SPEC): Likewise.
+
+	* config/arm/t-netbsd (TARGET_LIBGCC2_CFLAGS): Add -fpic.
+	(SHLIB_EXT, SHLIB_NAME, SHLIB_SONAME, SHLIB_OBJS, SHLIB_LINK)
+	(SHLIB_INSTALL): Define.
+
+2001-12-13  Richard Earnshaw  <rearnsha@arm.com>
+
 	* arm.c (legitimize_pic_address): Handle LABEL_REFs in substantially
 	the same way as we handle SYMBOL_REFS.
 
