--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-13  Jason Merrill  <jason@redhat.com>
+
+	* optimize.c (maybe_clone_body): Fix parameter updating.
+
 2001-12-12  Jason Merrill  <jason@redhat.com>
 
 	* decl.c (store_parm_decls): Remove parms_have_cleanups cruft.
