--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-13  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.md (eh_set_lr_di): Change scratch
+        constraint to base register.
+        (eh_set_lr_si): Same.
+
 2001-12-13  Hans-Peter Nilsson  <hp@axis.com>
 
 	* expr.c (expand_expr, case ADDR_EXPR): Don't honor
