--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-09  Aldy Hernandez  <aldyh@redhat.com>
+
+        * attribs.c (c_common_attribute_table): Swap decl_req and type_req
+	for the mode attribute.
+        (handle_mode_attribute): Handle types, not decls.
+
 2001-12-13  Jason Merrill  <jason@redhat.com>
 
 	* c-common.h (COMPOUND_STMT_BODY_BLOCK): New macro.
