--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-13  Aldy Hernandez  <aldyh@redhat.com>
+
+	* gcc.dg/altivec-4.c: New.
+
 2001-12-13  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.dg/20011113-1.c: New test.
