* netbsd.h (COLLECT_SHARED_INIT_FUNC) (COLLECT_SHARD_FINI_FUNC): Remove redundant semicolon. * doc/tm.texi (COLLECT_SHARED_INIT_FUNC) (COLLECT_SHARD_FINI_FUNC): Use @code where appropriate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47996 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-14  Richard Earnshaw  <rearnsha@arm.com>
+
+	* netbsd.h (COLLECT_SHARED_INIT_FUNC)
+	(COLLECT_SHARD_FINI_FUNC): Remove redundant semicolon.
+	* doc/tm.texi (COLLECT_SHARED_INIT_FUNC)
+	(COLLECT_SHARD_FINI_FUNC): Use @code where appropriate.
+
 2001-12-13  Richard Henderson  <rth@redhat.com>
 
 	* regrename.c (kill_value_regno): Simplify chain removal.
