--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec 14 19:53:23 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (sqrt?f): Fix conditionals.
+
 Fri Dec 14 07:29:52 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config.gcc (alpha64-dec-*vms*): New case.
