--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-14  Jason Merrill  <jason@redhat.com>
+
+	* diagnostic.c (sorry): Increment sorrycount before saving the
+	buffer state.
+
 Fri Dec 14 19:53:23 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (sqrt?f): Fix conditionals.
