--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -93,8 +93,6 @@
 ;; 44 This is a `sfence' operation.
 ;; 45 This is a noop to prevent excessive combiner cleverness.
 ;; 46 This is a `femms' operation.
-;; 47 This is a `prefetch' (3DNow) operation.
-;; 48 This is a `prefetchw' operation.
 ;; 49 This is a 'pavgusb' operation.
 ;; 50 This is a `pfrcp' operation.
 ;; 51 This is a `pfrcpit1' operation.
@@ -19400,10 +19398,58 @@
   [(set_attr "type" "sse")
    (set_attr "memory" "unknown")])
 
+(define_expand "prefetch"
+  [(prefetch (match_operand:SI 0 "address_operand" "p")
+	     (match_operand:SI 1 "const_int_operand" "n")
+	     (match_operand:SI 2 "const_int_operand" "n"))]
+  "TARGET_PREFETCH_SSE || TARGET_3DNOW"
+  "
+{
+  int rw = INTVAL (operands[1]);
+  int locality = INTVAL (operands[2]);
+  if (rw != 0 && rw != 1)
+    abort ();
+  if (locality < 0 || locality > 3)
+    abort ();
+  /* Use 3dNOW prefetch in case we are asking for write prefetch not
+     suported by SSE counterpart or the SSE prefetch is not available
+     (K6 machines).  Otherwise use SSE prefetch as it allows specifying
+     of locality.  */
+  if (TARGET_3DNOW
+       && (!TARGET_PREFETCH_SSE || rw))
+    {
+      emit_insn (gen_prefetch_3dnow (operands[0], operands[1]));
+    }
+  else
+    {
+      int i;
+      switch (locality)
+	{
+	  case 0:	/* No temporal locality.  */
+	    i = 0;
+	    break;
+	  case 1:	/* Lowest level of temporal locality.  */
+	    i = 3;
+	    break;
+	  case 2:	/* Moderate level of temporal locality.  */
+	    i = 2;
+	    break;
+	  case 3:	/* Highest level of temporal locality.  */
+	    i = 1;
+	    break;
+	  default:
+	    abort ();	/* We already checked for valid values above.  */
+	    break;
+	}
+      emit_insn (gen_prefetch_sse (operands[0], GEN_INT (i)));
+    }
+  DONE;
+}")
+
 (define_insn "prefetch_sse"
   [(unspec [(match_operand:SI 0 "address_operand" "p")
 	    (match_operand:SI 1 "immediate_operand" "n")] 35)]
-  "TARGET_SSE || TARGET_3DNOW_A"
+  "TARGET_PREFETCH_SSE"
 {
   switch (INTVAL (operands[1]))
     {
@@ -19579,15 +19625,16 @@
   [(set_attr "type" "mmx")])
 
 (define_insn "prefetch_3dnow"
-  [(unspec [(match_operand:SI 0 "address_operand" "p")] 47)]
+  [(prefetch (match_operand:SI 0 "address_operand" "p")
+	     (match_operand:SI 1 "const_int_operand" "n")
+	     (const_int 0))]
   "TARGET_3DNOW"
-  "prefetch\\t%a0"
-  [(set_attr "type" "mmx")])
-
-(define_insn "prefetchw"
-  [(unspec [(match_operand:SI 0 "address_operand" "p")] 48)]
-  "TARGET_3DNOW"
-  "prefetchw\\t%a0"
+{
+  if (INTVAL (operands[1]) == 0)
+    return "prefetch\t%a0";
+  else
+    return "prefetchw\t%a0";
+}
   [(set_attr "type" "mmx")])
 
 (define_insn "pf2id"
